# snip-and-autosave

./: .gitignore  Cargo.toml  README.md  build.rs  snip-and-autosave-manifest.rc  snip-and-autosave.exe.manifest
bindings/: Cargo.toml  build.rs
resources/: resources.rc  snip-and-autosave.exe.manifest
src/: convert.rs  extensions.rs  heuristics.rs  main.rs  notification_area.rs  settings.rs  windows.rs
