[package]
name = "snip-and-autosave"
version = "0.1.0"
authors = ["Carl Albrecht <invlpg@protonmail.com>"]
edition = "2018"

[dependencies]
bindings = { path = "bindings" }
windows = "0.18"
lazy_static = "1.4"
image = { version = "0.23", default-features = false, features = ["png"] }
thiserror = "1.0"
platform-dirs = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
chrono = "0.4"
rayon = "1.5"

[build-dependencies]
embed-resource = "1.6"
winres = "0.1"
resvg = "0.15"
usvg = "0.15"
tiny-skia = "0.5"
ico = "0.1"

[profile.release]
# Stolen from https://deterministic.space/high-performance-rust.html
lto = "fat"
codegen-units = 1
